# REX_voice_assistant

./: .gitignore  ASSISTANT_ROADMAP.md  CHANGELOG.md  README.md  TRAINING_HEY_REX.md  pyproject.toml  requirements.txt  test_actions.py  test_ui_bridge.py  upload_to_hf.py
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
docs/: ACTIONS.md  DECISIONS.md  LESSONS.md  UI_PLAN.md
docs/specifics/: CONTRIBUTING_VOICE_SAMPLES.md  TRAINING_RERUN.md
rex_main/: audio_stream.py  cli.py  commands.py  default_config.yaml  fast_vad.py  matcher.py  metrics.py  metrics_printer.py  recorder.py  rex.py  setup_wizard.py  steelseries.py  wake_word.py
rex_main/actions/: __init__.py  apps.py  discord.py  registry.py  service.py  spotify.py  steelseries.py  ytmd.py
rex_main/dashboard/: server.py
rex_main/ui/: __init__.py  app.py  bridge.py  hud.py  icons.py  runtime_thread.py  settings.py  tray.py
