[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rex-voice-assistant"
version = "0.3.2"
description = "Offline voice assistant for controlling YouTube Music Desktop and Spotify"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["voice-assistant", "whisper", "spotify", "youtube-music", "speech-recognition"]
authors = [
    {name = "David Antolick", email = "david.antolick@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "numpy>=1.24,<3",
    "scipy>=1.11,<2",
    "sounddevice>=0.5,<0.6",
    "soundfile>=0.12,<0.14",
    "faster-whisper>=1.0,<2",
    "silero-vad>=5.0,<7",
    "torch>=2.2,<3",
    "torchaudio>=2.2,<3",
    "pyyaml>=6.0.1,<7",
    "requests>=2.32.2,<3",
    "ytmusicapi>=1.7,<2",
    "spotipy>=2.24,<3",
    "python-dotenv>=1.0,<2",
    "click>=8.1,<9",
    "rich>=13.7,<16",
    "keyring>=24.3,<26",
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "websockets>=13.0,<17",
    "openwakeword>=0.6,<1",
]

[project.optional-dependencies]
cuda = ["nvidia-cudnn-cu12==9.5.1.17"]
benchmark = ["psutil>=6.0,<8", "nvidia-ml-py>=12.535,<13"]
wake_word = ["rex-voice-assistant"]   # Backward-compat alias; openwakeword is now in base deps.
integrations = [
    "pypresence>=4.3,<5",
    "obsws-python>=1.6,<2",
    "aiohttp>=3.10.11,<4",
]
streamer = ["rex-voice-assistant[integrations,benchmark]"]
dev = [
    "pytest>=8.0,<10",
    "pytest-asyncio>=0.23,<2",
    "black>=24.3,<27",
    "ruff>=0.6,<1.0",
    "pip-audit>=2.7,<3",
]

[project.scripts]
rex = "rex_main.cli:main"

[project.urls]
Homepage = "https://github.com/David-Antolick/rex_voice_assistant"

[tool.setuptools.packages.find]
where = ["."]
include = ["rex_main*"]

[tool.setuptools.package-data]
rex_main = ["default_config.yaml", "dashboard/static/*"]
